fix: adjust border-radius for section card and update gap in word hero component

--- a/src/styles/components/_section-card.scss
+++ b/src/styles/components/_section-card.scss
@@ -4,7 +4,7 @@
 .c-section-card {
   background: white;
   border: 1px dashed var(--grey-100);
-  border-radius: 4px;
+  border-radius: 4px 4px 0 0;
   box-shadow:
     0 0.5px 0.6px rgb(0 0 0 / 8%),
     0 4px 5px rgb(0 0 0 / 16%);
